--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 aniso8601==3.0.0
 astroid==1.6.4
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.0.5
 django-authtools==1.6.0
 django-cors-headers==2.2.0
 django-environ==0.4.4
 django-graphql-jwt==0.1.10
+django-webpack-loader==0.6.0
 graphene==2.1
 graphene-django==2.0.0
 graphql-core==2.0
@@ -23,5 +25,6 @@ pytz==2018.4
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.11.0
+static3==0.7.0
 typing==3.6.4
 wrapt==1.10.11
