--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ graphene==2.1
 graphene-django==2.0.0
 graphql-core==2.0
 graphql-relay==0.4.5
+gunicorn==19.8.1
 iso8601==0.1.12
 isort==4.3.4
 lazy-object-proxy==1.3.1
